<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/findfriendsbg"
    tools:context="com.footmate.FindYourFriendsActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        contentInsetLeft="72dp"
        contentInsetStart="72dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize">
        <LinearLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/searchbox"
                android:gravity="center"
                android:hint="Search for Futmates"
                android:drawableLeft="@drawable/searchicon"
                android:imeOptions="actionSearch"
                android:paddingLeft="5dp"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/username"
                android:textColorHint="@color/dark_greay"
                android:textSize="@dimen/drawer_text_size" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/findyourfriends"
        android:text="@string/findyourfriends"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:layout_below="@+id/toolbar"
        android:textColor="@color/findyourfriendtextcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/findfacebookfriendslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/findyourfriends"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/findfacebookfriends"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/findgmailfriendslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/findfacebookfriendslayout"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gmail"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/findgmailfriends"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/findcontactslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/findgmailfriendslayout"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/addcontacts"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/findcontacts"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textColor="@color/findyourfriendtextcolor"
        android:layout_below="@+id/findcontactslayout"
        android:text="@string/suggestplayerstofollow"/>

</RelativeLayout>
