<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:alpha="0.8"
    android:background="@color/black"
    android:id="@+id/popup_element">
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/organizer_cross"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/invitefutmatesimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/invite_futmates"/>
        <TextView
            android:id="@+id/invitefutmatestext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:text="@string/invitefutmates"/>
        <ImageView
            android:id="@+id/inviteviaurlimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/invite_via_url"/>
        <TextView
            android:id="@+id/inviteviaurltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:text="@string/inviteviaurl"/>
        <ImageView
            android:id="@+id/gamesettingsimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/game_setting"/>
        <TextView
            android:id="@+id/gamesettingstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:text="@string/gamesettings"/>
    </LinearLayout>
</RelativeLayout>