<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/inviteplayers_screen_bg"
    tools:context="com.footmate.InvitePlayersActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        contentInsetLeft="72dp"
        contentInsetStart="72dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_toolbar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_alignLeft="@+id/text_top"
                android:padding="10dp"
                android:src="@drawable/organizer_cross" />
            <TextView
                android:id="@+id/inviteplayerstitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/inviteplayers"
                android:textSize="@dimen/toolbar_text"
                android:singleLine="true"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/editlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/white">
        <EditText
            android:id="@+id/editsearchfutmates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/searchicon"
            android:background="@drawable/search_bg"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:gravity="center"
            android:hint="@string/search"/>
    </LinearLayout>
    <TextView
        android:id="@+id/playersyoucaninvite"
        android:text="@string/playersyoucaninvite"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:textSize="14sp"
        android:layout_below="@+id/editlayout"
        android:textColor="@color/findyourfriendtextcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/followerslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/playersyoucaninvite"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_green"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:text="0 followers"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/phonecontactslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/followerslayout"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phonecontact"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:text="@string/phonecontacts"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textSize="14sp"
        android:textColor="@color/findyourfriendtextcolor"
        android:layout_below="@+id/phonecontactslayout"
        android:text="@string/suggestedplayerstoinvite"/>
</RelativeLayout>
