<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.footmate.fragment.TrackGamesFragment">
    <LinearLayout
        android:id="@+id/track_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginTop="10dp">
            <com.google.android.gms.maps.MapView
                android:id="@+id/mapview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/mark" />
        </RelativeLayout>
        <LinearLayout
            android:background="@color/primaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/layout_selectType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/track_match"
                android:weightSum="3">
                <TextView
                    android:id="@+id/text_match"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/text_freeplay"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/text_practice"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textColor="@color/tracktextcolor"
                android:textSize="20sp"
                android:text="@string/tracktext"/>
            <ImageView
                android:id="@+id/check_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_gravity="center"
                android:src="@drawable/check_in"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/locationaccess_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/primaryColor"
        android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:src="@drawable/football_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/tracktext1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/tracktext2"/>
            <ImageView
                android:id="@+id/gotosettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:src="@drawable/go_to_settings"/>
    </LinearLayout>

</LinearLayout>
